--- a/style/layout/_settings.scss
+++ b/style/layout/_settings.scss
@@ -8,8 +8,8 @@
   src: url(/Theme-maison/font/Dosis-Medium.ttf);
 }
 
-$font1: cormor, sans serif;
-$font2: dosis, sans serif;
+$font1: cormor;
+$font2: dosis;
 $white: rgb(255, 255, 255);
 $white2: #f7f3ea;
 $brown: #b56953;
