--- a/style/layout/_footer.scss
+++ b/style/layout/_footer.scss
@@ -1,1 +1,36 @@
 @use "./settings";
+footer {
+  height: 483px;
+  background: settings.$white2;
+
+  .foot-contain {
+    width: 80%;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 40% 30% 30%;
+    padding: 150px 0;
+    gap: 10px;
+
+    .lien {
+      padding-right: 150px;
+      width: 100%;
+      text-align: left;
+      line-height: 20px;
+
+      h1 {
+        padding-bottom: 15px;
+        font-size: 2.5rem;
+      }
+      h3 {
+        padding-bottom: 15px;
+      }
+      ul {
+        li {
+          cursor: pointer;
+          text-decoration: underline;
+          padding-bottom: 5px;
+        }
+      }
+    }
+  }
+}
