--- a/style/layout/_section4.scss
+++ b/style/layout/_section4.scss
@@ -1,1 +1,37 @@
 @use "./settings";
+
+.section4 {
+  height: 540px;
+
+  .container {
+    height: 100%;
+    width: 80%;
+    margin: 0 auto;
+    text-align: left;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 15px;
+    padding: 80px 0;
+
+    .base-contain {
+      width: 90%;
+      height: 100%;
+      margin: 0 auto;
+      color: settings.$grey;
+
+      img {
+        padding: 0;
+      }
+
+      h3 {
+        padding: 10px 0;
+        font-weight: 100;
+      }
+
+      p {
+        line-height: 20px;
+        margin-top: 10px;
+      }
+    }
+  }
+}
